@@ -19,6 +19,8 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution 
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "NameServerTests", "NameServerTests\NameServerTests.csproj", "{34CCD4B0-E99B-4488-8FBE-6F19D386AE8A}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Tkl.Jumbo.Dfs", "Tkl.Jumbo.Dfs\Tkl.Jumbo.Dfs.csproj", "{67D71A3A-4FDA-4136-8423-07A7C1592E65}"
+EndProject
 Global
 	GlobalSection(TestCaseManagementSettings) = postSolution
 		CategoryFile = Jumbo.vsmdi
@@ -36,6 +38,10 @@ Global
 		{34CCD4B0-E99B-4488-8FBE-6F19D386AE8A}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{34CCD4B0-E99B-4488-8FBE-6F19D386AE8A}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{34CCD4B0-E99B-4488-8FBE-6F19D386AE8A}.Release|Any CPU.Build.0 = Release|Any CPU
+		{67D71A3A-4FDA-4136-8423-07A7C1592E65}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{67D71A3A-4FDA-4136-8423-07A7C1592E65}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{67D71A3A-4FDA-4136-8423-07A7C1592E65}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{67D71A3A-4FDA-4136-8423-07A7C1592E65}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
