@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EDAB2A7C-1894-428F-9B1C-3B33AC0E0F3B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{67D71A3A-4FDA-4136-8423-07A7C1592E65}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NameServer</RootNamespace>
-    <AssemblyName>NameServer</AssemblyName>
+    <RootNamespace>Tkl.Jumbo.Dfs</RootNamespace>
+    <AssemblyName>Tkl.Jumbo.Dfs</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -49,14 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditLog.cs" />
-    <Compile Include="FileSystem.cs" />
-    <Compile Include="FileSystemMutation.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Directory.cs" />
+    <Compile Include="File.cs" />
+    <Compile Include="FileSystemEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
